# hierarchical-agents

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
core/: __init__.py  __main__.py  cli.py
core/integration/: __init__.py  chain_store.py  delegation.py  exceptions.py  orchestrator.py  result_propagation.py
core/ipc/: __init__.py  cleanup.py  exceptions.py  interface.py  message_bus.py  models.py  protocol.py  schema.py
core/memory/: __init__.py  context_manager.py  exceptions.py  garbage_collector.py  interface.py  knowledge_base.py  memory_store.py  models.py  schema.py  tiered_storage.py
core/registry/: __init__.py  exceptions.py  integrity.py  models.py  org_chart.py  profile_config.py  profile_registry.py  schema.py
core/workers/: __init__.py  exceptions.py  interface.py  models.py  resume.py  schema.py  serialization.py  subagent_registry.py
dashboard/api/: serializers.py
docs/: AGENT-INTEGRATION-PROMPT.md  ARCHITECTURE.md  GETTING-STARTED.md  HERMES-INTEGRATION.md  SETUP.md
integrations/claude_code/: __init__.py  adapter.py  config.py  memory_adapter.py  message_bridge.py  profile_adapter.py
integrations/hermes/: __init__.py  activation.py  config.py  delivery.py  gateway_hook.py  ipc_listener.py  memory_bridge.py  message_router.py  profile_bridge.py  summarization.py  worker_bridge.py  worker_manager.py
scripts/: bench_ipc.py  hierarchy_gateway.py  migrate_specialist_role.py  patch_hermes_gateway.py  sync_hermes_profiles.py
templates/: PLAYBOOK.md  __init__.py  generator.py
tests/: __init__.py  conftest.py  test_hierarchy_tools.py
tests/test_integration/: conftest.py  test_concurrent.py  test_delegation.py  test_e2e_propagation.py  test_edge_cases.py  test_execution_layer.py  test_gap_closure.py  test_hermes_integration.py  test_memory_scoping.py  test_orchestrator.py  test_result_propagation.py  test_worker_bridge_chain.py  (+1 more)
tests/test_ipc/: __init__.py  (+9 more)
tools/: __init__.py  hierarchy_tools.py
ui/: __init__.py  __main__.py  config.py  server.py  services.py
(+70 files in other folders)
